Move background image to home section only - prevents covering work section

--- a/Pages/style.css
+++ b/Pages/style.css
@@ -7,14 +7,16 @@
   
 
   .parent {
+  width: 100%;
+}
+
+  #Home {
   background: linear-gradient(to right, rgba(66,145,215,0.658), rgba(76,240,150,0.753)),
               url('https://images.pexels.com/photos/3584926/pexels-photo-3584926.jpeg?auto=compress&cs=tinysrgb&w=600');
   min-height: 100vh;
-  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /* background-image:url(https://images.pexels.com/photos/3584926/pexels-photo-3584926.jpeg?auto=compress&cs=tinysrgb&w=600); */
 }
 
 
